Fixing issue with Favorites menu item moving to new line when viewport with is too small.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathSiteCommon/trunk@51099 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/AllSites.css
+++ b/Site/htdocs/assets/css/AllSites.css
@@ -342,6 +342,8 @@ div#quick-search td {
 
 #menu {
   z-index: 500;
+  height: 28px;
+  min-width: 900px;
 }
 
 .sf-menu {
